@@ -1,5 +1,7 @@
 Changes for 1.3:
 
+ - added '<=' comporator for trigger severity of action conditions (Eugene)
+ - fixed problem with escape characters in triggers (Eugene)
  - fixed 'system.cpu.util[*]' for Tru64 (Eugene)
  - disabled exit code handling of UserParameter scripts (Eugene)
  - improved UserParameter substitution (Eugene)
